--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <script type="text/javascript" src="bower_components/objectpath/lib/ObjectPath.js"></script>
   <script type="text/javascript" src="bower_components/angular-schema-form/dist/schema-form.min.js"></script>
   <script type="text/javascript" src="bower_components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
+  <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
   <script src="components/version/version.js"></script>
